--- a/tabs__tab.dust
+++ b/tabs__tab.dust
@@ -1,5 +1,5 @@
-<li role="presentation">
-    <a class="c-tabs__tab {class}" role="tab">
+<li class="c-tabs__tab {class}" role="presentation">
+    <a role="tab">
         {body}
     </a>
 </li>
