--- a/tabs__tab.dust
+++ b/tabs__tab.dust
@@ -1,5 +1,5 @@
 <li class="c-tabs__tab {class}" role="presentation">
-    <a role="tab">
+    <a class="c-tabs__link {linkClass}" role="tab">
         {body}
     </a>
 </li>
